--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-contentlayer",
+  "name": "personal-blog-brandonweng",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,22 +10,27 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tailwindcss/typography": "^0.5.9",
+    "@mdx-js/loader": "^3.0.1",
+    "@mdx-js/react": "^3.0.1",
+    "@next/mdx": "^14.2.4",
+    "@tailwindcss/typography": "^0.5.13",
+    "@types/mdx": "^2.0.13",
     "@types/node": "18.16.1",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
-    "@vercel/analytics": "^1.0.0",
+    "@vercel/analytics": "^1.3.1",
     "autoprefixer": "10.4.14",
-    "contentlayer": "^0.3.2",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
-    "next": "13.4.1",
-    "next-contentlayer": "^0.3.2",
+    "gray-matter": "^4.0.3",
+    "next": "^14.2.4",
+    "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.2.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
+    "types": "link:@/mdx/types",
     "typescript": "5.0.4"
   }
 }
