--- a/package.json
+++ b/package.json
@@ -16,21 +16,19 @@
     "@tailwindcss/typography": "^0.5.13",
     "@types/mdx": "^2.0.13",
     "@types/node": "18.16.1",
-    "@types/react": "18.2.0",
-    "@types/react-dom": "18.2.1",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "@vercel/analytics": "^1.3.1",
     "autoprefixer": "10.4.14",
-    "eslint": "8.39.0",
+    "eslint": "^8.57.0",
     "eslint-config-next": "13.3.1",
     "gray-matter": "^4.0.3",
     "next": "^14.2.4",
-    "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.2.1",
-    "postcss": "8.4.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2",
-    "types": "link:@/mdx/types",
+    "postcss": "^8.4.38",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tailwindcss": "^3.4.4",
     "typescript": "5.0.4"
   }
 }
