--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@vercel/analytics": "^1.3.1",
     "autoprefixer": "10.4.14",
     "eslint": "^8.57.0",
-    "eslint-config-next": "13.3.1",
+    "eslint-config-next": "^13.3.1",
     "gray-matter": "^4.0.3",
     "next": "^14.2.4",
     "next-themes": "^0.2.1",
