--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@eslint/config-array": "^0.16.0",
     "@mdx-js/loader": "^3.0.1",
     "@mdx-js/react": "^3.0.1",
-    "@next/mdx": "^14.2.4",
+    "@next/mdx": "^14.2.5",
+    "@phosphor-icons/react": "^2.1.7",
     "@tailwindcss/typography": "^0.5.13",
     "@types/mdx": "^2.0.13",
     "@types/node": "18.16.1",
@@ -21,15 +22,21 @@
     "@types/react-dom": "^18.3.0",
     "@vercel/analytics": "^1.3.1",
     "autoprefixer": "10.4.14",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "eslint": "^8.57.0",
-    "eslint-config-next": "^13.3.1",
+    "eslint-config-next": "^13.5.6",
+    "framer-motion": "^11.3.2",
     "gray-matter": "^4.0.3",
-    "next": "^14.2.4",
+    "lucide-react": "^0.407.0",
+    "next": "^14.2.5",
     "next-themes": "^0.2.1",
-    "postcss": "^8.4.38",
+    "postcss": "^8.4.39",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "tailwind-merge": "^2.4.0",
     "tailwindcss": "^3.4.4",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.0.4"
   }
 }
